--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.ScooterSharing"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateRideActivity"
+            android:exported="true" />
+        <activity
+            android:name=".StartRideActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
